# sbc-qdm

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
config/: domain.yaml
notebooks/: build_evaluation_report.py  build_evaluation_report_ethiopia.py  evaluation_report.ipynb  evaluation_report_ethiopia.ipynb
src/sbc_qdm/: __init__.py  chunking.py  cli.py  config.py  io.py  pipeline.py  preprocess.py  qdm.py  regrid.py  validate.py  viz.py
src/sbc_qdm/methods/: __init__.py  delta_change.py  detrended_quantile_mapping.py  empirical_quantile_mapping.py  linear_scaling.py  power_transformation.py  variance_scaling.py
src/sbc_qdm/verify/: __init__.py  aggregate.py  boundary.py  calibration.py  compare.py  deterministic.py  distributions.py  probabilistic.py  run.py  skill.py  spatial.py  spells.py  viz.py
tests/: test_compare.py  test_io_preprocess.py  test_methods.py  test_regrid_qdm.py  test_verify.py
